--- a/JavaScript/15.事件.md
+++ b/JavaScript/15.事件.md
@@ -313,3 +313,105 @@ document.body.onclick = function(event) {
 
 ### 用户界面事件
 
+#### load事件
+
+load：在window上当页面加载完成后触发，在`iframe`上当所有框架所有内容加载完成后触发，在`img`上当图片加载完成后触发，在`<object>`元素上相应对象加载完成后触发
+
+##### 在window上的load事件
+
+```js
+window.addEventListener('load',function(e){
+	console.log('e')
+},false)
+```
+
+```html
+<body onload="console.log(e)"></body>
+<!--html中没有window，任何在window上发生的事件，都可以通过给body元素对应的属性赋值来指定-->
+```
+
+##### 在`img`上的load事件
+
+图片可在DOM上触发load事件，也可以在非DOM上触发load事件
+
+```html
+<img src="smile.gif" onload="console.log('image loaded')">
+```
+
+```js
+window.addEventListener('load',function(e){
+	let image = document.createElement('img')
+	image.addEventListener('load',(e)=>{
+		console.log(e.target.src)
+	})
+	image.body.appendChild(image) // 必须在文档加载完毕后再去插入img
+	image.src = "smile.gif" // 必须先给image指定事件，再去设置src，因为图片只要指定src就会开始下载
+})
+```
+
+##### 非标准load事件
+
+script和link元素添加到页面上之前不会触发load事件，link的load事件只支持IE和Opera
+
+#### unload事件
+
+unload：在window上页面完全卸载后触发，在`iframe`上所有框架内容卸载后触发，在`<object>`元素上相应对象卸载完成后触发
+
+```js
+window.addEventListener('unload',(event)=>{
+	console.log('Unloaded')
+})
+```
+
+```html
+<body onunload="console.log(e)"></body>
+```
+
+#### abort事件
+
+abort：在`<object>`元素上当相应对象加载完成前被用户提前终止下载时触发
+
+#### error事件
+
+error：在window上当`js`报错时触发，在`img`上无法加载图片时触发，在`<object>`元素上当无法加载响应对象时触发，在`iframe`上当框架无法加载时触发
+
+#### select事件
+
+select：当文本框上用于选择了一个或多个字符时触发
+
+#### resize事件
+
+resize：在window或`iframe`缩放时触发
+
+```js
+window.addEventListener('resize',(e)=>{
+	 console.log(e)
+})
+```
+
+#### scroll事件
+
+scroll：当用户滚动包含滚动条的元素时在元素上触发，在混杂模式下，通过body元素检测`scrollLeft`和`scrollTop`属性的变化，在标准模式下，除了早期safari都发生在`html`元素上
+
+```js
+window.addEventListener('scroll',(e)=>{
+	if(document.compatMode == 'CSS1Compat'){
+		console.log(document.documentElement.scrollTop)
+	}else{
+		console.log(document.body.scrollTop)
+	}
+})
+```
+
+### 焦点事件
+
+焦点事件在页面元素获得或失去焦点时触发，可用`document.hasFocus()`和`document.activeElement`来获取和检测焦点
+
+- `blur`：当元素失去焦点时触发，不冒泡
+- `focus`：当元素获得焦点时触发，不冒泡
+- `focusin`：当元素获取焦点时触发，冒泡
+- `focusout`：当元素失去焦点时触发，冒泡
+
+当焦点从一个元素移动到另一个元素上时，会依次触发事件：`focusout`-->`focusin`-->`blur`-->`focus`
+
+### 鼠标和滚轮事件
