--- a/CSS/2.选择器.md
+++ b/CSS/2.选择器.md
@@ -74,7 +74,7 @@ a[href="www.baidu.com"][title="baidu"]{...}
 
 | 类型         | 描述                                                |
 | ------------ | --------------------------------------------------- |
-| [foo~="bar"] | 选择所有带有foo属性，且foo属性值包含单词bar的元素   |
+| [foo~="bar"] | 选择所有带有foo属性，且foo属性值包含单词子项的元素  |
 | [foo*="bar"] | 选择所有带有foo属性，且foo属性值中含有子串bar的元素 |
 | [foo^="bar"] | 选择所有带有foo属性，且foo属性值以bar开头的元素     |
 | [foo$="bar"] | 选择所有带有foo属性，且foo属性值以bar结尾的元素     |
@@ -208,7 +208,7 @@ p:last-child{font-weight: bold;}
 li:last-child{text-transform: uppercase}
 ```
 
-### 选择第一个和最后一个某种元素
+### 选择第一个和最后一个某种子元素
 
 `:first-of-type`选择一个元素的第一个某种元素
 
@@ -233,7 +233,7 @@ p:nth-child(2n-1){}/*选中某个元素的第2n-1个子元素p*/
 
 `:nth-child(even)`和`:nth-child(odd)`可选中某个元素的所有偶数和奇数子元素
 
-### 选择每第n个某种元素
+### 选择第n个某种类型子元素
 
 `nth-of-type()`
 
