--- a/CSS/7.视觉格式化基础.md
+++ b/CSS/7.视觉格式化基础.md
@@ -6,6 +6,8 @@
 
 ![](C:\Users\Administrator\Desktop\Note\imgs\盒模型.png)
 
+![盒模型](/Users/avalon/Documents/Note/imgs/盒模型.png)
+
 `box-sizing`适用于能设定width和height的元素，不能继承
 
 ### 横向格式化属性
