修改事件（鼠标事件）

--- a/JavaScript/15.事件.md
+++ b/JavaScript/15.事件.md
@@ -416,3 +416,76 @@ window.addEventListener('scroll',(e)=>{
 
 ### 鼠标和滚轮事件
 
+#### 鼠标事件
+
+- `click`：用户点击鼠标左键或者按键盘回车键时触发
+- `dblclick`：用户双击鼠标时触发
+- `mousedown`：用户按下任意键时触发
+- `mouseup`：用户释放鼠标键时触发
+- `mouseenter`：用户把鼠标光标从元素外部移动到元素内部触发，不会冒泡
+- `mouseleave`：用户把鼠标光标从元素内部移到元素外部触发，不会冒泡
+- `mousemove`：鼠标光标在元素上移动时反复触发
+- `mouseout`：鼠标光标从一个元素移到另一个元素时触发。移到的元素可以是原始元素的外部元素，也可以是子元素
+- `mouseover`：用户光标从元素外移到元素内部时触发
+
+##### 客户端坐标
+
+保存在`event`对象中的`clientX`和`clientY`属性，表示发生事件时鼠标光标在视口中的坐标
+
+![](C:\Users\Administrator\Desktop\Note\imgs\clientX.png)
+
+##### 页面坐标
+
+保存在`event`对象中的`pageX`和`pageY`，表示发生事件时光标在页面上的位置
+
+`IE8`以前的版本`event`对象没有暴露页面坐标，可用`document.body(标准模式)`或`document.documentElement(混杂模式)`的`scrollLeft`和`scrollTop`属性获取
+
+```js
+div.addEventListener('click',(e)=>{
+	let pageX = event.pageX,
+		pageY = event.pageY;
+	if(pageX === undefined){
+		pageX = event.clientX + (document.body.scrollLeft || document.documentElement.scrollLeft)
+	}
+	if(pageY === undefined){
+		pageY = event.clientY + (document.body.scrollTop || document.documentElement.scrollTop)
+	}
+})
+```
+
+##### 屏幕坐标
+
+`event`对象的`screenX`和`screenY`属性，表示光标在屏幕上的坐标
+
+![](C:\Users\Administrator\Desktop\Note\imgs\screenX.png)
+
+##### 修饰键
+
+`shiftKey、ctrlKey、altKey、metaKey`会在对应按键按下时值为true，可在鼠标事件中检测修饰键是否按下
+
+##### 相关元素
+
+对`mouseover`和`mouseout`事件来说，存在与事件相关的相关元素，保存在event对象的`relatedTarget`属性中，`IE8`以前在`mouseover`事件触发时相关元素保存在`fromElement`属性中，`mouseout`事件触发时相关元素保存在`toElement`属性中
+
+```js
+getRelatedTarget: function(e){
+	if(e.relatedTarget){
+        return e.relatedTarget
+    }else if(e.toElement){
+        return e.toElement
+    }else if(e.fromElement){
+        return e.fromElement
+    }else{
+        return null
+    }
+}
+```
+
+##### 鼠标按键
+
+鼠标事件的`event`对象上有一个button属性，0表示按下鼠标主键，1表示按下鼠标中键，2表示按下鼠标副键
+
+##### `mousewheel`事件
+
+`mousewheel`事件会在使用鼠标滚轮时触发，这个事件会在任何元素上触发并冒泡到document和window。事件对象有一个`wheelDelta`属性，当鼠标滚轮向前滚动，`wheelDelta`加120，向后滚动，`wheelDelta`减120
+
