--- a/JavaScript/15.事件.md
+++ b/JavaScript/15.事件.md
@@ -485,6 +485,8 @@ getRelatedTarget: function(e){
 
 鼠标事件的`event`对象上有一个button属性，0表示按下鼠标主键，1表示按下鼠标中键，2表示按下鼠标副键
 
+##### 额外事件信息
+
 ##### `mousewheel`事件
 
 `mousewheel`事件会在使用鼠标滚轮时触发，这个事件会在任何元素上触发并冒泡到document和window。事件对象有一个`wheelDelta`属性，当鼠标滚轮向前滚动，`wheelDelta`加120，向后滚动，`wheelDelta`减120
