--- a/CSS/17.过渡.md
+++ b/CSS/17.过渡.md
@@ -12,6 +12,8 @@
 
 禁用过渡效果`transition-property: none`，在DOM中，不管过渡是单独声明还是涵盖在all中，过渡结束都会触发`transitionend`事件
 
+**需要设定过度的初始值**
+
 ### 设置过渡持续时间
 
 `transition-duration`指定从一个状态过渡到另一个状态需要的时间。值是以逗号分隔的时间长度列表，单位是s或者ms。适用于所有元素以及before，after伪元素
@@ -73,3 +75,4 @@ transition属性值可以是none，也可以时任意个以逗号分隔的单次
 [支持动画的属性](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_animated_properties)
 
 **<u>如果能找到属性的两个值的中间点，即能内插，那么属性的值就支持动画</u>**
+
