--- a/JavaScript/16.动画和canvas图形.md
+++ b/JavaScript/16.动画和canvas图形.md
@@ -182,17 +182,29 @@ context.fillRect(30, 30, 50, 50);
 
 #### 渐变
 
-可以通过调用上下文的createLinearGradient(起点x坐标，起点y坐标，终点x坐标，终点y坐标)创建线性渐变，并返回CanvasGradient对象。
+可以通过调用上下文的createLinearGradient(起点x坐标，起点y坐标，终点x坐标，终点y坐标)创建线性渐变，并返回指定大小区域的CanvasGradient对象。
 
 使用CanvasGradient对象的addColorStop(色标值，css颜色)方法为渐变指定色标，色标范围为0~1，1是最后一种颜色
 
 ```js
 let gradient = context.createLinearGradient(30,30,70,70)
-gradient.addColorStop(0,'red')
-gradient.addColorStop(1,'blue')
+gradient.addColorStop(0,'white')
+gradient.addColorStop(1,'black')
+context.fillStyle = gradient
+context.fillRect(30,30,50,50)
 ```
 
+可通过调用上下文的createRadialGradient(起点圆心x，起点圆心y，半径，终点圆心x，终点圆心y，半径)创建径向渐变
 
+```js
+let gradient = context.createRadialGradient(55,55,10,55,55,30)
+gradient.addColorStop(0,'red')
+gradient.addColorStop(1,'blue')
+context.fillStyle="#ff0000"
+context.fillRect(10,10,50,50)
+context.fillStyle=gradient
+context.fillRect(30,30,50,50)
+```
 
 #### 图案
 
