--- a/JavaScript/4.基本引用类型.md
+++ b/JavaScript/4.基本引用类型.md
@@ -2,7 +2,9 @@
 
 ## Date
 
-`new Date()`:不传日期表示当前日期的日期对象，传一个毫秒数表示创建该毫秒数对应的日期对象`Date.parse()`:传入一个表示日期的字符串，返回该日期的毫秒值
+`new Date()`:不传日期表示当前日期的日期对象，传一个毫秒数表示创建该毫秒数对应的日期对象
+
+`Date.parse()`:传入一个表示日期的字符串，返回该日期的毫秒值
 
 ```js
 let date = new Date()
