--- a/JavaScript/5.集合引用类型.md
+++ b/JavaScript/5.集合引用类型.md
@@ -113,7 +113,7 @@ console.log(colors3) // ['red','green','blue',['pink','cyan']]
 
 `reverse()`将数组反转
 
-`sort()`将数组每项调用`String()`进行排序，可接受一个比较函数
+`sort()`将数组每项调用`String()`进行排序，可接受一个比较函数,形参a和b表示数组中靠前的项和靠后的项，如果需要交换位置，则返回正数，否则返回负数
 
 ### 搜索和位置方法
 
