--- a/CSS/18.动画.md
+++ b/CSS/18.动画.md
@@ -3,7 +3,7 @@
 适用关键帧@keyframes来定义动画，项目上线前，需要补上@-webkit-这样的私有前缀
 
 ```css
-@keysframes r{/*定义动画及动画的名字*/
+@keyframes r{/*定义动画及动画的名字*/
 	from{/*定义起始动画*/
 		transform: rotate(0)
 	}
